fix title gap

--- a/assets/src/admin/styles/sureforms-backend-ui-styles.scss
+++ b/assets/src/admin/styles/sureforms-backend-ui-styles.scss
@@ -14,7 +14,7 @@
 				@apply mt-2 w-full border-0 rounded-md py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 bg-white placeholder:text-gray-500 focus:ring-2 focus:ring-sf_primary_color focus:outline-0 sm:text-sm sm:leading-6;
 			}
 			.sf-classic-textarea-element {
-				@apply w-full border-solid border-0 border-[#d1d5db] rounded-md py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 bg-white placeholder:text-gray-500 focus:ring-2 focus:border-solid focus:border-sf_primary_color focus:ring-sf_primary_color focus:outline-0 focus:bg-white sm:text-sm sm:leading-6;
+				@apply mt-2 w-full border-solid border-0 border-[#d1d5db] rounded-md py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 bg-white placeholder:text-gray-500 focus:ring-2 focus:border-solid focus:border-sf_primary_color focus:ring-sf_primary_color focus:outline-0 focus:bg-white sm:text-sm sm:leading-6;
 			}
 			.sf-classic-email-element {
 				@apply w-full border-solid border-0 border-[#D1D5DB] rounded-md py-1.5 pr-10 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 bg-white placeholder:text-gray-500 focus:ring-2 focus:border-solid focus:border-sf_primary_color focus:ring-sf_primary_color focus:outline-0 focus:bg-white sm:text-sm sm:leading-6;
